--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>1.49</version>
 		</dependency>
+		<!-- Batik has multiple problems:
+		- RGBA is not supported
+		- Some stroke types are not supported
+		- Sometimes it does not paint to the graphics object
+
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-transcoder</artifactId>
@@ -80,5 +85,13 @@
 			<artifactId>xmlgraphics-commons</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>batik-swing</artifactId>
+			<version>1.8</version>
+			<scope>test</scope>
+		</dependency>
+		 -->
+
 	</dependencies>
 </project>
